--- a/Tuesday/MetaD-Tutorial.ipynb
+++ b/Tuesday/MetaD-Tutorial.ipynb
@@ -400,7 +400,7 @@
     "module load openmpi/4.0.5-gcc10.2.0\n",
     "\n",
     "GMX_BIN=\"gmx_mpi\"\n",
-    "GMX_MDRUN_BIN=\"mpirun -np 4 gmx_mpi mdrun -ntomp 4\"\n",
+    "GMX_MDRUN_BIN=\"mpirun -np 1 gmx_mpi mdrun -ntomp 1\"\n",
     "RunFilename=NaCl_NPT-300K\n",
     "${GMX_MDRUN_BIN}  -deffnm ${RunFilename}   -plumed plumed.dat \n",
     "echo \"0\" | ${GMX_BIN} trjconv -f ${RunFilename}.xtc -s ${RunFilename}.tpr -pbc whole -o ${RunFilename}.pbc-whole.xtc"
@@ -810,7 +810,7 @@
     "module load openmpi/4.0.5-gcc10.2.0\n",
     "\n",
     "GMX_BIN=\"gmx_mpi\"\n",
-    "GMX_MDRUN_BIN=\"mpirun -np 4 gmx_mpi mdrun -ntomp 4\"\n",
+    "GMX_MDRUN_BIN=\"mpirun -np 1 gmx_mpi mdrun -ntomp 1\"\n",
     "RunFilename=NaCl_NPT-300K\n",
     "${GMX_MDRUN_BIN}  -deffnm ${RunFilename}   -plumed plumed.dat \n",
     "echo \"0\" | ${GMX_BIN} trjconv -f ${RunFilename}.xtc -s ${RunFilename}.tpr -pbc whole -o ${RunFilename}.pbc-whole.xtc"
@@ -1116,7 +1116,7 @@
    "id": "f05d7f50",
    "metadata": {},
    "source": [
-    "# Exercise 3 - Reweighting\n",
+    "# Exercise 2b - Reweighting\n",
     "\n",
     "## Reweighthing on distance CV"
    ]
@@ -1343,7 +1343,7 @@
    "id": "89762ef2",
    "metadata": {},
    "source": [
-    "# Exercise 4 - Biasing both distance and solvation CV"
+    "# Exercise 3 - Biasing both distance and solvation CV"
    ]
   },
   {
@@ -1364,7 +1364,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cp -r Template-Exercise-X Exercise-4\n"
+    "cp -r Template-Exercise-X Exercise-3\n"
    ]
   },
   {
@@ -1374,7 +1374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd Exercise-4/"
+    "%cd Exercise-3/"
    ]
   },
   {
@@ -1493,7 +1493,7 @@
     "module load openmpi/4.0.5-gcc10.2.0\n",
     "\n",
     "GMX_BIN=\"gmx_mpi\"\n",
-    "GMX_MDRUN_BIN=\"mpirun -np 4 gmx_mpi mdrun -ntomp 4\"\n",
+    "GMX_MDRUN_BIN=\"mpirun -np 1 gmx_mpi mdrun -ntomp 1\"\n",
     "RunFilename=NaCl_NPT-300K\n",
     "${GMX_MDRUN_BIN}  -deffnm ${RunFilename}   -plumed plumed.dat \n",
     "echo \"0\" | ${GMX_BIN} trjconv -f ${RunFilename}.xtc -s ${RunFilename}.tpr -pbc whole -o ${RunFilename}.pbc-whole.xtc"
@@ -1721,9 +1721,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42130fbd",
+   "metadata": {},
+   "source": [
+    "# Exercise 3b - Restarting "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0433e786",
+   "metadata": {},
+   "source": [
+    "See the GROMACS manual for further information of restarting GROMACS jobs: \n",
+    "\n",
+    "[https://manual.gromacs.org/current/user-guide/managing-simulations.html](https://manual.gromacs.org/current/user-guide/managing-simulations.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2baae47",
+   "id": "5d9375b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd110bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash \n",
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "GMX_BIN=\"gmx_mpi\"\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "mv ${RunFilename}.tpr ${RunFilename}.old.tpr\n",
+    "\n",
+    "# Extend the time of the TPR file\n",
+    "${GMX_BIN} convert-tpr -s ${RunFilename}.old.tpr -o ${RunFilename}.tpr -extend 5000.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59cd5354",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash \n",
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "GMX_BIN=\"gmx_mpi\"\n",
+    "GMX_MDRUN_BIN=\"mpirun -np 1 gmx_mpi mdrun -ntomp 1\"\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "${GMX_MDRUN_BIN}  -deffnm ${RunFilename}   -plumed plumed.dat -cpi ${RunFilename}.cpt\n",
+    "echo \"0\" | ${GMX_BIN} trjconv -f ${RunFilename}.xtc -s ${RunFilename}.tpr -pbc whole -o ${RunFilename}.pbc-whole.xtc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54caaf8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "grep \"Restarting from hills.data\" NaCl_NPT-300K.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a1c46bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_colvardata(\"hills.data\",6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "446f3aad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 1000 --kt 2.494353 --idw dist --outfile fes-stride-1000/fes.dist.stride-\")\n",
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 1000 --kt 2.494353 --idw coord --outfile fes-stride-1000/fes.coord.stride-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cbbe0a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fes_stride=1000\n",
+    "num_fesfile=len(glob.glob(\"fes-stride-1000/fes.dist.stride-*\"))\n",
+    "for i in range(num_fesfile):  \n",
+    "    if i == num_fesfile-1: continue\n",
+    "    fesfile=\"fes-stride-1000/fes.dist.stride-{}.dat\".format(i)\n",
+    "    time=(i+1)*fes_stride\n",
+    "    fes=np.loadtxt(fesfile)\n",
+    "    plt.plot(fes[:,0],fes[:,1]/kBT,'-',label=\"{:4d} ps\".format(time))    \n",
+    "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
+    "plt.ylabel(\"Free Energy [kBT]\")\n",
+    "plt.legend()\n",
+    "plt.ylim([0,10])\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec26ab8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fes_stride=1000\n",
+    "num_fesfile=len(glob.glob(\"fes-stride-1000/fes.coord.stride-*\"))\n",
+    "for i in range(num_fesfile):  \n",
+    "    if i == num_fesfile-1: continue\n",
+    "    fesfile=\"fes-stride-1000/fes.coord.stride-{}.dat\".format(i)\n",
+    "    time=(i+1)*fes_stride\n",
+    "    fes=np.loadtxt(fesfile)\n",
+    "    plt.plot(fes[:,0],fes[:,1]/kBT,'-',label=\"{:4d} ps\".format(time))    \n",
+    "plt.xlabel(\"Na Solvation\")\n",
+    "plt.ylabel(\"Free Energy [kBT]\")\n",
+    "plt.legend()\n",
+    "plt.ylim([0,10])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54b59a4",
    "metadata": {},
    "outputs": [],
    "source": []
