--- a/Monday/toy_model_for_sampling.ipynb
+++ b/Monday/toy_model_for_sampling.ipynb
@@ -18,10 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "45ee5db0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning on use of the timeseries module: If the inherent timescales of the system are long compared to those being analyzed, this statistical inefficiency may be an underestimate.  The estimate presumes the use of many statistically independent samples.  Tests should be performed to assess whether this condition is satisfied.   Be cautious in the interpretation of the data.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import numpy.random\n",
@@ -477,7 +485,7 @@
    "id": "10addfdc",
    "metadata": {},
    "source": [
-    "### Idea 2: Define some auxiliary potentials that bridge the gap between minima."
+    "### Idea 2: Define some auxiliary (\"helper\") potentials that bridge the gap between minima."
    ]
   },
   {
