Finalized Exercise_3: Multiple walkers metadynamics

--- a/Wednesday/Exercise_2/umbrella_sampling.ipynb
+++ b/Wednesday/Exercise_2/umbrella_sampling.ipynb
@@ -3013,7 +3013,7 @@
    "id": "2a74d0d0",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
