--- a/Tuesday/MetaD-Tutorial.ipynb
+++ b/Tuesday/MetaD-Tutorial.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "**For running this on other resources, you need to changed the `plmued_bin` variable here below.**\n",
     "\n",
-    "**Furthermore, you might need to change the `GMX_BIN` and `GMX_MDRUN_BIN` variables in all the places where GROMACS is run (you all need to comment the `module load` commands**"
+    "**Furthermore, you might need to change the `GMX_BIN` and `GMX_MDRUN_BIN` variables in all the places where GROMACS is run (you also need to comment the `module load` commands)**"
    ]
   },
   {
@@ -1132,7 +1132,7 @@
    "id": "37d517df",
    "metadata": {},
    "source": [
-    "To understand the convergence of the FES, we should look at how the FES behaves over time. For this we can use the `--stride 500` flag that will tell the `sum_hills` tool to output the fes every 500 added Gausssians, that every 500 ps. Here we will need to use the `--mintozero` flag as otherwise it is not possible to compare the FES. "
+    "To understand the convergence of the FES, we should look at how the FES behaves over time. For this we can use the `--stride 1000` flag that will tell the `sum_hills` tool to output the fes every 1000 added Gausssians, that every 1000 ps. Here we will need to use the `--mintozero` flag as otherwise it is not possible to compare the FES. "
    ]
   },
   {
@@ -1143,8 +1143,8 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "rm -rf fes-stride-500\n",
-    "mkdir fes-stride-500"
+    "rm -rf fes-stride-1000\n",
+    "mkdir fes-stride-1000"
    ]
   },
   {
@@ -1154,7 +1154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 500 --outfile fes-stride-500/fes.stride-\")"
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 1000 --outfile fes-stride-1000/fes.stride-\")"
    ]
   },
   {
@@ -1164,12 +1164,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fes_stride=500\n",
+    "fes_stride=1000\n",
     "num_fesfile=len(glob.glob(\"fes-stride-500/fes.stride-*\"))\n",
     "for i in range(num_fesfile):  \n",
     "    if i == num_fesfile-1: continue\n",
     "    time=(i+1)*fes_stride\n",
-    "    fes=np.loadtxt(\"fes-stride-500/fes.stride-{}.dat\".format(i))\n",
+    "    fes=np.loadtxt(\"fes-stride-1000/fes.stride-{}.dat\".format(i))\n",
     "    plt.plot(fes[:,0],fes[:,1]/kBT,'-',label=\"{:4d} ps\".format(time))    \n",
     "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
     "plt.ylabel(\"Free Energy [kBT]\")\n",
@@ -1193,7 +1193,7 @@
    "source": [
     "## Free Energy Difference \n",
     "\n",
-    "One way to gauge the convergence is to look at the free energy difference between the two states, the associated state and the dissociated state. To define the regions for the two states, we need to select a distance that seperates the two states. The best way to do that is to look at the probability distribution, exp(-beta*F)."
+    "One way to gauge the convergence is to look at the free energy difference between the two states, the associated state and the dissociated state. To define the regions for the two states, we need to select a distance that seperates the two states. The best way to do that is to look at the probability distribution, $P(\\mathbf{s}) \\propto \\exp(-\\beta*F(\\mathbf{s}))$."
    ]
   },
   {
@@ -1300,7 +1300,7 @@
    "source": [
     "fe_time=[]\n",
     "fe_diff=[]\n",
-    "fes_stride=1\n",
+    "fes_stride=10\n",
     "num_fesfile=len(glob.glob(\"fes-stride-10/fes.stride-*\"))\n",
     "for i in range(num_fesfile):  \n",
     "    if i == num_fesfile-1: continue\n",
@@ -2296,11 +2296,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c422334c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --kt 2.494353 --idw dist --outfile fes/fes.dist.10000ps.data\")\n",
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --kt 2.494353 --idw coord --outfile fes/fes.coord.10000ps.data\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "420098b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fes_files=[\"../Exercise-2/fes/fes.mintozero.data\",\n",
+    "           \"../Exercise-2/fes-reweight/fes-reweight.dist.data\",\n",
+    "           \"fes/fes.dist.data\",\n",
+    "           \"fes/fes.dist.10000ps.data\"]\n",
+    "\n",
+    "labels=[\"1 CV biased: FES from bias\",\n",
+    "        \"1 CV biased: FES from rewighting\",\n",
+    "        \"2 CV biased: FES from bias after 5000 ps\",\n",
+    "        \"2 CV biased: FES from bias after 10000ps\"]\n",
+    "\n",
+    "plot_fes(fes_files,labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5bde9164",
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero  --bin 200,200  --outfile fes/fes.dist-coord.data\")"
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero  --bin 200,200  --outfile fes/fes.dist-coord.10000ps.data\")"
    ]
   },
   {
@@ -2310,7 +2341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fes_data = np.loadtxt(\"./fes/fes.dist-coord.data\")\n",
+    "fes_data = np.loadtxt(\"./fes/fes.dist-coord.10000ps.data\")\n",
     "# have to change the value in reshape to fit fes file generated by sum_hills\n",
     "distance = fes_data[:,0].reshape(201,201)\n",
     "coord =    fes_data[:,1].reshape(201,201)\n",
