Performed Exercise 4 for the new 4-site system and removed Exercise 5

--- a/Wednesday/Exercise_1/decoupled_MD.ipynb
+++ b/Wednesday/Exercise_1/decoupled_MD.ipynb
@@ -14,6 +14,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b12dd512",
+   "metadata": {},
+   "source": [
+    "## 1. Running simulations in parallel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "192b78ea",
    "metadata": {
     "slideshow": {
@@ -793,7 +801,7 @@
     }
    },
    "source": [
-    "## Now, it's your turn! 👨‍💻"
+    "## 2. CPU scaling: Now, it's your turn! 👨‍💻"
    ]
   },
   {
@@ -869,14 +877,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d41d31b5",
+   "id": "bd5ddfb1",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## Solution"
+    "### Solution"
    ]
   },
   {
