--- a/Wednesday/Exercise_3/multi_metadynamics.ipynb
+++ b/Wednesday/Exercise_3/multi_metadynamics.ipynb
@@ -37,6 +37,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d05ca9d4",
+   "metadata": {},
+   "source": [
+    "## 1. Running multiple walkers metadynamics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "55892f04",
@@ -49,7 +57,7 @@
    "source": [
     "%%bash\n",
     "# Here we remove the output of the exercise if there is any.\n",
-    "dirs=(file_based mpi_based)\n",
+    "dirs=(mpi_based)\n",
     "for dir in \"${dirs[@]}\"; do\n",
     "    if ls -d \"$dir\" >/dev/null 2>&1; then\n",
     "        rm -rf \"$dir\"\n",
@@ -709,6 +717,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bae29f94",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## 2. Data analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84ef6fa0",
    "metadata": {
     "slideshow": {
@@ -996,6 +1016,19 @@
     "plt.ylabel('Free energy (kT)')\n",
     "plt.legend()\n",
     "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48795ea8",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## 3. Reference(s)\n",
+    "- The paper that proposed multiple walkers metadynamics: [Raiteri, Paolo, et al. \"Efficient reconstruction of complex free energy landscapes by multiple walkers metadynamics.\" The journal of physical chemistry B 110.8 (2006): 3533-3539.](https://pubs.acs.org/doi/10.1021/jp054359r)"
    ]
   }
  ],
