--- a/Wednesday/Exercise_1/decoupled_MD.ipynb
+++ b/Wednesday/Exercise_1/decoupled_MD.ipynb
@@ -168,7 +168,7 @@
     }
    },
    "source": [
-    "- Each of the 4 simulation was performed with 2 MPI processes, and the workload (e.g. the calculation of interactions) of running a simulation was further divided by 2 threads. "
+    "- Each of the 4 simulations was performed with 2 MPI processes, and the workload (e.g. the calculation of interactions) of running a simulation was further divided by 2 threads. "
    ]
   },
   {
