update ACF equations

--- a/Thursday/(RE)TIS-Code.ipynb
+++ b/Thursday/(RE)TIS-Code.ipynb
@@ -941,7 +941,12 @@
    "id": "1449d91f",
    "metadata": {},
    "source": [
-    "**Autocorrelation Graphs**:\n",
+    "**Autocorrelation Graphs**: \n",
+    "\n",
+    "- The equation used for ACF calculation is:   \n",
+    "\n",
+    "$$ \\sum_{i=1}^{N-lag}{\\frac{(\\theta_{i}-\\bar{\\theta})(\\theta_{i+lag}-\\bar{\\theta})}{\\sum_{i=1}^{N}{(\\theta_{i}-\\bar{\\theta}})^2}} $$ \n",
+    "\n",
     "\n",
     "- What does this sampling check calculates? What does it tell you about your sampling?"
    ]
@@ -954,7 +959,6 @@
    "outputs": [],
    "source": [
     "\"\"\" 2) Autocorrelation Graphs: a) Max OP, b) Pathlength, c) Indicator function, where it is 1 if path in i crosses i+1, 0 otherwise \"\"\"\n",
-    "\"\"\" The equation used for ACF calculation is:   [INSERT]           \"\"\"\n",
     "\n",
     "maxlag = 50                                             # Define your max lag\n",
     "acf_m = [[] for i in range(ninterfaces)]\n",
