--- a/Wednesday/Exercise_2/umbrella_sampling.ipynb
+++ b/Wednesday/Exercise_2/umbrella_sampling.ipynb
@@ -929,6 +929,58 @@
     "- Another perspective of interpreting the theory of MBAR: [Shirts, Michael R. \"Reweighting from the mixture distribution as a better way to describe the Multistate Bennett Acceptance Ratio.\" arXiv preprint arXiv:1704.00891 (2017).](https://arxiv.org/abs/1704.00891)\n",
     "- A review about umbrella sampling: [Kästner, Johannes. \"Umbrella sampling.\" Wiley Interdisciplinary Reviews: Computational Molecular Science 1.6 (2011): 932-942.](https://doi.org/10.1002/wcms.66)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6f847cd",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Takeaways"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a9c1fa9",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Umbrella sampling is composed of 2 steps:\n",
+    "  - Pulling simulation: A simulation that is used to generate configurations at different CV values.\n",
+    "  - Production runs: A bunch of simulations that fix configurations at different CV values to force the exploration of the CV space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eda3ff0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- The force constant for the pulling simulation does not really matter as long as it is strong enough to pull the pull group away.\n",
+    "- The force constant for the productions should be large enough to pin down the configurations but small enough to have wide probability distributions for each configuration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c1a7c6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- We decorrelate samples before performing MBAR. \n",
+    "- MBAR can estimate the free energy surface as a function of the chosen CV rigorously. "
+   ]
   }
  ],
  "metadata": {
