--- a/Wednesday/Exercise_3/multi_metadynamics.ipynb
+++ b/Wednesday/Exercise_3/multi_metadynamics.ipynb
@@ -373,6 +373,31 @@
     "## 3. Reference(s)\n",
     "- The paper that proposed multiple walkers metadynamics: [Raiteri, Paolo, et al. \"Efficient reconstruction of complex free energy landscapes by multiple walkers metadynamics.\" The journal of physical chemistry B 110.8 (2006): 3533-3539.](https://pubs.acs.org/doi/10.1021/jp054359r)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0882f748",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Takeaways"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d75add5d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Using multiple walkers metadynamics, we are able to get a free energy surface consistent with the one obtained from metadynamics we performed on Tuesday. \n",
+    "- Multiple walkers metadynamics accelerate the exploration of the CV space is suitable espeically when multiple CVs are used. "
+   ]
   }
  ],
  "metadata": {
