fix plottiing to avoid crashes and fixing acc. prob calculation on TPS

--- a/Thursday/(RE)TIS-Code.ipynb
+++ b/Thursday/(RE)TIS-Code.ipynb
@@ -611,11 +611,11 @@
     "\n",
     "    - In the shooting move, you first select a random configuration between interface i-1 and i+1. Then you will randomize the configuration's momenta and afterwards, integrate the equation of motion forward and backward in time until one end reaches A and the other end reaches A or B. This will either form an AA path or an AB path. \n",
     "\n",
-    "    <img src=\"https://raw.githubusercontent.com/SAMPEL-Group/pathsampling-tutorials/main/shoot-moves/2-ways-shoot.png\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/SAMPEL-Group/pathsampling-tutorials/main/shoot-moves/2-ways-shoot.png?token=GHSAT0AAAAAAB6UC6NL5GLC5LUYRAVIK2DOZA3LFCQ\">\n",
     "\n",
     "    - In the swap move, this is a free move! (Yay!) Here paths belonging to neighboring interface can perform a swap if each path satisfies each other's interface ensemble criteria. As an example, since the green path crosses the green interface and also the purple interface (with both path ends in A), the green path will also satisfies the purple interface ensemble. The same logic applies to the purple path. As such, the swap move can be performed and now each interface ensemble gain a new path for free. No MD cost!! \n",
     "\n",
-    "    <img src=\"https://raw.githubusercontent.com/SAMPEL-Group/pathsampling-tutorials/main/shoot-moves/Re-move.png\">"
+    "    <img src=\"https://raw.githubusercontent.com/SAMPEL-Group/pathsampling-tutorials/main/shoot-moves/Re-move.png?token=GHSAT0AAAAAAB6UC6NLLNEVW6C4RJCNNHYCZA3LEXA\">"
    ]
   },
   {
@@ -1606,15 +1606,16 @@
     "from matplotlib.colors import Normalize \n",
     "from scipy.interpolate import interpn\n",
     "\n",
-    "skip = 1\n",
+    "throwout = 600                                                          # moves to discard to get the system to equilibrate\n",
     "\n",
     "x = []\n",
     "y = [] \n",
     "\n",
     "for l in range(len(interfaces)-1):\n",
-    "    for i in range(len(allpaths[l])):\n",
+    "    for i in range(len(allpaths[l][throwout::])):\n",
+    "        \n",
     "        # Let's only look at transition paths\n",
-    "        if np.where(allpaths[l][i][:,6] <= basinA)[0].shape[0] == 0 or np.where(allpaths[l][i][:,6] >= basinB)[0].shape[0] == 0:\n",
+    "        if np.where(allpaths[l][i+throwout][:,6] <= basinA)[0].shape[0] == 0 or np.where(allpaths[l][i+throwout][:,6] >= basinB)[0].shape[0] == 0:\n",
     "            continue\n",
     "        else:\n",
     "            for j in range(len(allpaths[l][i])): \n",
@@ -1638,8 +1639,10 @@
     "    idx = z.argsort()\n",
     "    x, y, z = x[idx], y[idx], z[idx]\n",
     "\n",
+    "# Plot the density of states visited\n",
+    "points = 100000              # our data is quite large, so we'll do this to avoid crashes when plotting\n",
     "ax.contour(x_vec,y_vec,energy,[-3.5,-3,-2.5,-2,-1.5,-1,-0.5,0,0.5,1,1.5,2,2.5,3], colors='silver')\n",
-    "ax.scatter( x, y, c=z, s=2, cmap = 'jet', alpha = 0.002)\n",
+    "ax.scatter( x[::len(x)/points], y[::len(y)/points], c=z[::len(z)/points], s=3, cmap = 'jet', alpha = 0.1)\n",
     "\n",
     "norm = Normalize(vmin = np.min(z), vmax = np.max(z))\n",
     "cbar = fig.colorbar(cm.ScalarMappable(norm = norm, cmap = 'jet'), ax=ax)\n",
