--- a/Thursday/TPS.ipynb
+++ b/Thursday/TPS.ipynb
@@ -464,7 +464,7 @@
     "\n",
     "# Perform TPS\n",
     "\n",
-    "for move in range(0, 100):\n",
+    "for move in range(0, n_moves):\n",
     "    print('Move {}'.format(move), end='\\r')\n",
     "\n",
     "    # Perform shooting move\n",
@@ -594,7 +594,12 @@
     "    allpaths.append(path)   \n",
     "                                            \n",
     "    # Calculate acceptance probability\n",
-    "    print('Acceptance Probability: {}'.format(acc/n_moves))\n",
+    "    if move == 0 and acc == 0:\n",
+    "        print('Acceptance Probability: {}'.format(0))\n",
+    "    elif move == 0 and acc == 1:\n",
+    "        print('Acceptance Probability: {}'.format(1))\n",
+    "    else:\n",
+    "        print('Acceptance Probability: {}'.format(acc/move))\n",
     "\n",
     "endtime = time.monotonic()\n",
     "\n",
@@ -767,10 +772,13 @@
     "y = [] \n",
     "\n",
     "\n",
-    "for i in range(len(successful_paths)):\n",
-    "    for j in range(len(successful_paths[i])): \n",
-    "        x.append(successful_paths[i][j][0])\n",
-    "        y.append(successful_paths[i][j][1])\n",
+    "for i in range(len(allpaths)):\n",
+    "    for j in range(len(allpaths[i])):\n",
+    "        if np.where(allpaths[i][:,6] <= basinA)[0].shape[0] == 0 or np.where(allpaths[i][:,6] >= basinB)[0].shape[0] == 0:\n",
+    "            continue\n",
+    "        else:\n",
+    "            x.append(allpaths[i][j][0])\n",
+    "            y.append(allpaths[i][j][1])\n",
     "y = np.asarray(y)\n",
     "x = np.asarray(x)\n",
     "\n",
