update frequency of printing out acc prob

--- a/Thursday/TPS.ipynb
+++ b/Thursday/TPS.ipynb
@@ -591,12 +591,20 @@
     "    allpaths.append(path)   \n",
     "                                            \n",
     "    # Calculate acceptance probability\n",
-    "    if move == 0 and acc == 0:\n",
-    "        print('Acceptance Probability: {}'.format(0))\n",
-    "    elif move == 0 and acc == 1:\n",
-    "        print('Acceptance Probability: {}'.format(1))\n",
+    "    if move % 50 == 0:\n",
+    "        if move == 0 and acc == 0:\n",
+    "            print('Move {}, Acceptance Probability: {}'.format(move,0))\n",
+    "        elif move == 0 and acc == 1:\n",
+    "            print('Move {}, Acceptance Probability: {}'.format(move,1))\n",
+    "        else:\n",
+    "            print('Move {}, Acceptance Probability: {}'.format(move,acc/move))\n",
     "    else:\n",
-    "        print('Acceptance Probability: {}'.format(acc/move))\n",
+    "        if move == 0 and acc == 0:\n",
+    "            print('Move {}, Acceptance Probability: {}'.format(move, 0), end='\\r')\n",
+    "        elif move == 0 and acc == 1:\n",
+    "            print('Move {}, Acceptance Probability: {}'.format(move, 1), end='\\r')\n",
+    "        else:\n",
+    "            print('Move {}, Acceptance Probability: {}'.format(move, acc/move), end='\\r')\n",
     "\n",
     "endtime = time.monotonic()\n",
     "\n",
