update ACF equation

--- a/Thursday/TPS.ipynb
+++ b/Thursday/TPS.ipynb
@@ -824,9 +824,13 @@
    "source": [
     "## Check the path correlation\n",
     "\n",
+    "- The equation used for ACF calculation is:   \n",
+    "\n",
+    "$$ \\sum_{i=1}^{N-lag}{\\frac{(\\theta_{i}-\\bar{\\theta})(\\theta_{i+lag}-\\bar{\\theta})}{\\sum_{i=1}^{N}{(\\theta_{i}-\\bar{\\theta}})^2}} $$ \n",
+    "\n",
     "- Why does path correlation matter?\n",
     "\n",
-    "- Can you think of other properties that you can also use to determine how correlated paths are in the TPE?"
+    "- Can you think of other properties that you can also use to determine how correlated paths are in the TPE?\n"
    ]
   },
   {
@@ -846,7 +850,6 @@
    "outputs": [],
    "source": [
     "\"\"\" Autocorrelation Graph: Criteria = Pathlength \"\"\"\n",
-    "\"\"\" The equation used for ACF calculation is:   [INSERT]           \"\"\"\n",
     "\n",
     "maxlag = 50                                                 # Define your max lag\n",
     "acf_p = [] \n",
