update fix print statements

--- a/Thursday/(RE)TIS-Code.ipynb
+++ b/Thursday/(RE)TIS-Code.ipynb
@@ -611,11 +611,11 @@
     "\n",
     "    - In the shooting move, you first select a random configuration between interface i-1 and i+1. Then you will randomize the configuration's momenta and afterwards, integrate the equation of motion forward and backward in time until one end reaches A and the other end reaches A or B. This will either form an AA path or an AB path. \n",
     "\n",
-    "    <img src=\"https://raw.githubusercontent.com/SAMPEL-Group/pathsampling-tutorials/main/shoot-moves/2-ways-shoot.png?token=GHSAT0AAAAAAB6UC6NL5GLC5LUYRAVIK2DOZA3LFCQ\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/minhx010/pathsampling-notebooks/main/shoot-moves/2-ways-shoot.png\">\n",
     "\n",
     "    - In the swap move, this is a free move! (Yay!) Here paths belonging to neighboring interface can perform a swap if each path satisfies each other's interface ensemble criteria. As an example, since the green path crosses the green interface and also the purple interface (with both path ends in A), the green path will also satisfies the purple interface ensemble. The same logic applies to the purple path. As such, the swap move can be performed and now each interface ensemble gain a new path for free. No MD cost!! \n",
     "\n",
-    "    <img src=\"https://raw.githubusercontent.com/SAMPEL-Group/pathsampling-tutorials/main/shoot-moves/Re-move.png?token=GHSAT0AAAAAAB6UC6NLLNEVW6C4RJCNNHYCZA3LEXA\">"
+    "    <img src=\"https://raw.githubusercontent.com/minhx010/pathsampling-notebooks/main/shoot-moves/Re-move.png\">"
    ]
   },
   {
@@ -771,7 +771,7 @@
     "                    \n",
     "    # Perform shooting move\n",
     "    else: \n",
-    "        print('Move = {} ; Performing Shoot Move'.format(move), end='\\r')\n",
+    "        print('Move = {} ; Performing Shoot Move                                '.format(move), end='\\r')\n",
     "        \n",
     "        for i in np.arange(len(interfaces)-1):                                  # i signifies the interface that I'm looking at\n",
     "            # print('i = ', i)\n",
@@ -1360,7 +1360,7 @@
     "                    \n",
     "    # Perform shooting move\n",
     "    else: \n",
-    "        print('Move = {} ; Performing Shoot Move'.format(move), end='\\r')\n",
+    "        print('Move = {} ; Performing Shoot Move                            '.format(move), end='\\r')\n",
     "        \n",
     "        for i in np.arange(len(interfaces)-1):                              # i signifies the interface that I'm looking at\n",
     "            # print('i = ', i)\n",
@@ -1642,7 +1642,7 @@
     "# Plot the density of states visited\n",
     "points = 100000              # our data is quite large, so we'll do this to avoid crashes when plotting\n",
     "ax.contour(x_vec,y_vec,energy,[-3.5,-3,-2.5,-2,-1.5,-1,-0.5,0,0.5,1,1.5,2,2.5,3], colors='silver')\n",
-    "ax.scatter( x[::len(x)/points], y[::len(y)/points], c=z[::len(z)/points], s=3, cmap = 'jet', alpha = 0.1)\n",
+    "ax.scatter( x[::int(len(x)/points)], y[::int(len(y)/points)], c=z[::int(len(z)/points)], s=3, cmap = 'jet', alpha = 0.1)\n",
     "\n",
     "norm = Normalize(vmin = np.min(z), vmax = np.max(z))\n",
     "cbar = fig.colorbar(cm.ScalarMappable(norm = norm, cmap = 'jet'), ax=ax)\n",
