test shoot-move 2

--- a/Thursday/TPS.ipynb
+++ b/Thursday/TPS.ipynb
@@ -583,7 +583,6 @@
     "            successful_paths.append(path)  \n",
     "        else:\n",
     "            path = np.append(halfpath,trial_path,axis=0)\n",
-    "            print(path)                                 \n",
     "            acc += 1\n",
     "            successful_paths.append(path)\n",
     "    \n",
@@ -608,7 +607,7 @@
     "\n",
     "endtime = time.monotonic()\n",
     "\n",
-    "print('Total simulation time for {} moves: {:10.3f} s'.format(n_moves,endtime-starttime))"
+    "print('Total simulation time for {} moves: {:10.3f} s                                       '.format(n_moves,endtime-starttime))"
    ]
   },
   {
@@ -637,15 +636,6 @@
    "outputs": [],
    "source": [
     "## EDIT HERE YOUR CODE HERE ##\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "beca1eae",
-   "metadata": {},
-   "source": [
-    "## Answer Key"
    ]
   },
   {
@@ -708,15 +698,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "5c39c5ea",
-   "metadata": {},
-   "source": [
-    "## Answer Key"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4754f613",
@@ -724,7 +705,7 @@
    "outputs": [],
    "source": [
     "# Plot\n",
-    "skip = 1\n",
+    "skip = 20\n",
     "\n",
     "for j in range(0,len(unsuccess_paths),skip):\n",
     "\n",
@@ -772,11 +753,10 @@
     "from matplotlib.colors import Normalize \n",
     "from scipy.interpolate import interpn\n",
     "\n",
-    "skip = 1\n",
+    "# Get all TPs \n",
     "\n",
     "x = []\n",
     "y = [] \n",
-    "\n",
     "\n",
     "for i in range(len(allpaths)):\n",
     "    for j in range(len(allpaths[i])):\n",
@@ -939,6 +919,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### TEMPLATE\n",
+    "\n",
     "# \"\"\" Autocorrelation Graph: Criteria = Pathlength \"\"\"\n",
     "# \"\"\" The equation used for ACF calculation is:   [INSERT]           \"\"\"\n",
     "\n",
