--- a/Thursday/TIS.ipynb
+++ b/Thursday/TIS.ipynb
@@ -836,7 +836,7 @@
    "outputs": [],
    "source": [
     "# Plot sampled paths from each interface\n",
-    "skip = 5\n",
+    "skip = 10\n",
     "\n",
     "for i in range(len(interfaces) - 1):\n",
     "    plt.figure()\n",
@@ -973,7 +973,6 @@
     "\n",
     "flux = n_cross_flux/(basinlen*dt)\n",
     "print(\"Flux through first interface: {}\\n\".format(flux))\n",
-    "print(\"Number of first crossings: {}\\n\".format(n_cross_flux))\n",
     "\n",
     "# Calculate Acceptance and Crossing Probability \n",
     "cross_probs = []\n",
@@ -984,7 +983,9 @@
     "    print(\"Interface %d acceptance prob: %f\" % (i, acc[i]/n_moves))\n",
     "\n",
     "ratek = flux*np.prod(np.asarray(cross_probs))  # flux from the first crossing * product of crossing probability of all interface\n",
+    "print('')\n",
     "print(\"Crossing probabilities: {}\".format(cross_probs))\n",
+    "print('')\n",
     "print(\"Rate Constant: {:e}\".format(ratek))\n",
     "\n"
    ]
