--- a/Thursday/TPS.ipynb
+++ b/Thursday/TPS.ipynb
@@ -936,7 +936,7 @@
     "# Plot the density of states visited\n",
     "points = 100000              # our data is quite large, so we'll do this to avoid crashes when plotting\n",
     "ax.contour(x_vec,y_vec,energy,[-3.5,-3,-2.5,-2,-1.5,-1,-0.5,0,0.5,1,1.5,2,2.5,3], colors='silver')\n",
-    "ax.scatter( x[::int(len(x)/points)], y[::int(len(y)/points)], c=z[::int(len(z)/points)], s=3, cmap = 'jet', alpha = 0.1s)\n",
+    "ax.scatter( x[::int(len(x)/points)], y[::int(len(y)/points)], c=z[::int(len(z)/points)], s=3, cmap = 'jet', alpha = 0.1)\n",
     "\n",
     "norm = Normalize(vmin = np.min(z), vmax = np.max(z))\n",
     "cbar = fig.colorbar(cm.ScalarMappable(norm = norm, cmap = 'jet'), ax=ax)\n",
