Added a supplementary section to Exercise 5

--- a/Wednesday/Exercise_2/umbrella_sampling.ipynb
+++ b/Wednesday/Exercise_2/umbrella_sampling.ipynb
@@ -3142,7 +3142,9 @@
    "source": [
     "As shown above, there is always overlap between neighboring windows, indicating that a force constant of 8000 $\\mathrm{kJ/mol/nm^2}$ is reasonable. \n",
     "- If the force constant were too large, the spread of each distribution would have been too narrow, so there would be a risk of not having overlap between some of the neighboring replicas. \n",
-    "- If the force constant were too small, it would be hard to keep the pull group at the desired center of the window. In this case, the pull group will drift to the metastable state, which could also lead to insufficient overlap. "
+    "- If the force constant were too small, it would be hard to keep the pull group at the desired center of the window. In this case, the pull group will drift to the metastable state, which could also lead to insufficient overlap. \n",
+    "\n",
+    "We will discuss this topic more in depth in Exercise 4, since this notebook has already been a little lengthy. 😃 "
    ]
   },
   {
