--- a/Friday/FFS.ipynb
+++ b/Friday/FFS.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "# FFS.ipynb\n",
+    "# By Steven Hall\n",
     "# Modified by Naomi Trampe\n",
     "# Last Update: 03-19-2023\n",
     "# SAMPEL Group"
