--- a/Friday/cFFS.ipynb
+++ b/Friday/cFFS.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FFS-Tutorial.ipynb\n",
-    "# Modified by Naomi Trampe\n",
+    "# cFFS.ipynb\n",
+    "# Written by: Steven Hall
+    "# Modified by: Naomi Trampe\n",
     "# Last Update: 03/19/2023 "
    ]
   },
