--- a/Friday/cFFS.ipynb
+++ b/Friday/cFFS.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# cFFS.ipynb\n",
-    "# Written by: Steven Hall
+    "# Written by: Steven Hall\n",
     "# Modified by: Naomi Trampe\n",
     "# Last Update: 03/19/2023 "
    ]
