Added supplementary sections to Exercise 5

--- a/Wednesday/Exercise_5/REUS.ipynb
+++ b/Wednesday/Exercise_5/REUS.ipynb
@@ -3679,18 +3679,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "338f70fc",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "As shown above, the neighboring distributions barely have overlap because the force constant is too large. We can further examine the mean and standard deviation of each distribution as below:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a29a803a",
    "metadata": {
     "slideshow": {
@@ -3722,7 +3710,9 @@
     }
    },
    "source": [
-    "For a one-dimensional simple harmonic potential with a force constant $K$, it can be dervied that its probability distribution is a normal distribution: $$P(x)=\\sqrt{\\frac{\\beta K}{2\\pi}}\\exp\\left (-\\frac{\\beta K}{2}(x-x_0)^2\\right)$$ and the corresponding standard deviation is $\\sigma=1/\\sqrt{\\beta K}$. (See [this post](https://weitsehsu.com/course/advanced_sampling/intro/) for how this is dervied.) Although the system we are using here is more than just harmonic potential since there are still interatomic potentials involved in the Boltzmann distribution, but in the case where the two groups (the pull group and the immobile group) are far away enough from each other, the equation above could give a rough estimate of the distribution spread given a force constant."
+    "For a one-dimensional simple harmonic potential with a force constant $K$, it can be dervied that its probability distribution is a normal distribution: $$P(x)=\\sqrt{\\frac{\\beta K}{2\\pi}}\\exp\\left (-\\frac{\\beta K}{2}(x-x_0)^2\\right)$$ and the corresponding standard deviation is $\\sigma=1/\\sqrt{\\beta K}$. (See [this post](https://weitsehsu.com/course/advanced_sampling/intro/) for how this is dervied.) Although the system we are using here is more than just a harmonic potential since there are also interatomic potentials involved in the Boltzmann distribution, the relationship above can still give a rough estimate of the distribution spread given a force constant, epsecially when the biased harmonic potential is relatively large compared to the contribution of the system potential itself. This can happen when\n",
+    "- A really lareg force constant is used.\n",
+    "- The immobile group and the pull group is far away from each other. "
    ]
   },
   {
@@ -3734,7 +3724,7 @@
     }
    },
    "source": [
-    "For example, in the case where we use $K=50000$, the relationship $\\sigma = 1/\\sqrt{\\beta K}$ gives an estimate of 0.007 nm for the standard deviation of the ion-pair distance, which is pretty close to what we got from the simulation. However, the estimates (0.07 nm) of the standard devaitions for the case where $K=500$ are not as good, which is because the interatomic potentials are relatively large compared to the biased harmonic potential. In the case where $K$ (hence the harmonic potential) is very large, the estimate tends to be more precise. "
+    "For example, in the case where we use $K=50000$, the relationship $\\sigma = 1/\\sqrt{\\beta K}$ yields an estimate of 0.007 nm for the standard deviation of the ion-pair distance, which is pretty close to what we got from the simulation. On the other hnad, the estimates (0.07 nm) of the standard devaitions for the case where $K=500$ are not as good because the biased potential is not large enough to shield the contribution from the interatomic potentials in the Boltzmann distribution. "
    ]
   },
   {
